✨ Change stepper response format